clear footer to prevent wrapping

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -350,9 +350,11 @@
 	}
 }
 
+footer {
+  clear: both;
+}
 footer .menu-item li img {
   max-height: 23px;
-  clear: both;
   opacity: .75;
 }
 footer .menu-item li a:hover img, .menu-item li a:active {
